# Zen-test

./: .claw-test  .codacy.yml  .codecov-trigger  .coverage-test-trigger  .coverage-trigger  .coveragerc  .deepsource.toml  .dockerignore  .editorconfig  .env  .env.env.backup  .env.example  .gitattributes  .github-app-auth-test  .gitignore  .gitlab-ci-template.yml  .pre-commit-config.yaml  .secrets.baseline  .snyk  .zenclaw-test  ACCESSIBILITY.md  ACCESS_CONTINUITY.md  ACHIEVED_80_PERCENT.md  ACTUAL_COVERAGE_REPORT.md  AGENTS.md  ARCHITECTURE_STATUS.md  BOOTSTRAP.md  CHANGELOG.md  CHANGELOG_v3.md  CHANGES_SUMMARY.md  CI_CD_INTEGRATION.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS.md  COMMUNITY.md  COMPLETE_TOOLS_SETUP.md  CONTRIBUTING.md  CONTRIBUTORS.md  COVERAGE_FINAL_REPORT.md  COVERAGE_REPORT.md  (+204 more)
.agent-comm/: README.md  protocol-v1.md
.analysis/: api_webui_analysis.md  autonomous_risk_analysis.md  core_agents_analysis.md  docs_config_analysis.md  tests_workflows_analysis.md  tools_integrations_analysis.md
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: BRANCH_CLEANUP.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_SUMMARY.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml  settings.yml  test-requirements.txt  workflow-fixes-summary.md
.kimi/: add_codecov_token.py  apply_security_fixes.py  chat_commands.py  check_codecov.py  check_pages_status.py  check_security_status.py  check_tests.py  check_workflow_status.py  close_issue_98.py  dismiss_alert.py  fix_dependabot_alerts.py  fix_pages_source.py  get_run_logs_detail.py  get_workflow_logs.py  github_app_auth.py  list_workflows_api.py  open_pages_settings.py  setup_kimi_claw.py  trigger_by_id.py  trigger_workflow.py  validate_discord_setup.py
.skills/: SKILL.md  SUBAGENTS.md
agent_comm/: models.py
agents/: __init__.py  acp_models.py  acp_v1.1_spec.md  agent_base.py  agent_coordinator_v3.py  agent_orchestrator.py  analysis_agent.py  cli.py  exploit_agent.py  integration.py  post_scan_agent.py  react_agent.py  react_agent_enhanced.py  react_agent_vm.py  research_agent.py
alembic/: README  env.py  script.py.mako
analysis/: __init__.py  attack_path.py  visualization.py
analysis_bot/: __init__.py  analysis_bot.py
api/: Dockerfile  QUICKSTART.sh  QUICK_TEST.sh  README.md  __init__.py  add_screenshot.py  auth.py  auth_integration.py  auth_simple.py  cli_client.py  csrf_protection.py  diagnose.sh  docker-compose.yml  kimi_personas_api.py  main.py  manage.sh  postman_collection.json  rate_limiter.py  rate_limiter_v2.py  requirements-api.txt  schemas.py  start_server.sh  status.sh  test_api.sh  websocket.py  websocket_manager.py  websocket_v2.py
app/: __init__.py  container.py  factory.py  lifecycle.py
audit/: __init__.py  compliance.py  config.py  logger.py  siem.py
auth/: __init__.py  api_key_manager.py  audit_logger.py  config.py  jwt_handler.py  main.py  mfa.py  middleware.py  password_hasher.py  rate_limiter.py  rbac.py  router.py  session_manager.py  user_manager.py
autonomous/: __init__.py  agent.py  agent_loop.py  exploit_validator.py  ki_analysis_agent.py  memory.py  react.py  sqlmap_integration.py  tool_executor.py
backends/: __init__.py  chatgpt_direct.py  claude_direct.py  duckduckgo.py  kimi_auth_backend.py  openrouter.py
benchmark_results/: performance_report_1771564675.txt  performance_results_1771564675.json
benchmarks/: README.md  __init__.py  agent_performance.py  api_performance.py  baseline_results.json  benchmark_engine.py  ci_benchmark.py  comparison.py  metrics.py  performance_suite.py  performance_test.py  requirements.txt  run_benchmarks.py  scan_performance.py
ci_cd/: Jenkinsfile  README.md  __init__.py  azure-pipelines.yml  github-actions-template.yml  gitlab-ci-template.yml
cloudflare/: README.md  package.json  wrangler.toml
config/: autonomous.json  benchmarks.json  integrations.json  risk_engine.json
core/: __init__.py  async_database.py  async_pool.py  asyncio_fix.py  cache.py  container.py  database.py  health_check.py  input_validator.py  llm_backend.py  models.py  orchestrator.py  performance.py  plugin_manager.py  plugin_system.py  rate_limiter.py  secure_config.py  secure_input_validator.py  shield_integration.py  state_machine.py  workflow_engine.py
dashboard/: README.md  __init__.py  events.py  index.html  manager.py  metrics.py  package-lock.json  package.json  tailwind.config.js  vitest.config.ts  websocket.py
data/: README.md
database/: __init__.py  auth_models.py  crud.py  cve_database.py  models.py
demo/: index.html  vite.config.ts
docker/: Dockerfile.tools  docker-compose.ci.yml  docker-compose.full.yml  docker-compose.vm.yml  nginx.conf  nginx_ssl.conf  sandboxed_executor.py
docs/: .nojekyll  AGENT_COMMUNICATION_PROTOCOL.md  AGENT_COMM_V2_DESIGN.md  ALIASES.md  API.md  API_DOCUMENTATION.md  API_EXAMPLES.md  API_GUIDE.md  API_REFERENCE.md  API_UPDATES_v2.3.6.md  ARCHITECTURE_COMPACT.md  ARCHITECTURE_V2.md  ATTACKERS_MINDSET_TTPs.md  AUTH_DATABASE_LAYER.md  AUTH_INTEGRATION.md  AUTO_FIX_STRATEGY.md  BENCHMARKS.md  BRANCH_PROTECTION.md  BUG_BOUNTY_PROGRAM.md  BUILD.md  CI_CD_MONITORING.md  CODEQL_MASTERPLAN.md  COMMUNITY.md  COMPARISON.md  CONTAINER_INTEGRATION.md  COPILOT_OVERTIME.md  COVERAGE_ROADMAP.md  DEPENDABOT.md  DEPLOYMENT.md  DEVELOPMENT.md  DISCORD_MISSING_CONTENT.md  DISCORD_PUBLIC_GUIDE.md  DISCORD_QR_POST.md  DISCORD_SECURITY_QUICKSTART.md  DISCORD_SERVER_SETUP.md  DISCORD_SETUP.md  DISCORD_SETUP_ZENCLAW.md  DOCKER_SETUP.md  DOCUMENTATION_PLAN.md  GITHUB_APP_AUTH.md  (+42 more)
evidence/: __init__.py  chain_of_custody.py  collector.py  models.py  storage.py
examples/: basic_usage.py  container_integration_demo.py  cve_and_ransomware_demo.py  exploit_validator_demo.py  multi_agent_demo.py  new_tools_demo.py  osint_demo.py  plugin_demo.py  post_scan_demo.py  protonvpn_demo.py  react_agent_example.py  shield_demo.py  subdomain_scan_example.py  vm_pentest_example.py
guardrails/: __init__.py  domain_validator.py  ip_validator.py  (+2 more)
(+1020 files in other folders)
